Changing the placement of the picture

--- a/lab.html
+++ b/lab.html
@@ -9,11 +9,20 @@
 </head>
 <body style="background-color:lavender">
     <h1>Scars</h1>
-    <h2>Cheryl Rainfield</h2>
-
-        <img src="https://th.bing.com/th/id/OIP.VCBhJbq-UpaCTketGlHVYwAAAA?w=186&h=287&c=7&r=0&o=5&pid=1.7" alt=""                                                             class="center"    >
-        <p>Kendra, fifteen, hasn't felt safe since she began to recall devastating memories of childhood sexual abuse, especially because she still can't remember the most important detail-- her abuser's identity. Frightened, Kendra believes someone is always watching and following her, leaving menacing messages only she understands. If she lets her guard down even for a minute, it could cost Kendra her life. To relieve the pressure, Kendra cuts; aside from her brilliantly expressive artwork, it's her only way of coping. Since her own mother is too self-absorbed to hear her cries for help, Kendra finds support in others instead: from her therapist and her art teacher, from Sandy, the close family friend who encourages her artwork, and from Meghan, the classmate who's becoming a friend and maybe more. But the truth about Kendra's abuse is just waiting to explode, with startling unforeseen consequences. Scars is the unforgettable story of one girl's frightening path to the truth.
+        <div style = "text-align:center">
+        <a href="https://www.cherylrainfield.com/">
+            <button type="button">Cheryl Rainfield</button>
+        </a>
+        </div>
+        <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347954389l/7531478.jpg" />
+        
+        <div>
+        <p>
+            Kendra, fifteen, hasn't felt safe since she began to recall devastating memories of childhood sexual abuse, especially because she still can't remember the most important detail-- her abuser's identity. Frightened, Kendra believes someone is always watching and following her, leaving menacing messages only she understands. If she lets her guard down even for a minute, it could cost Kendra her life. To relieve the pressure, Kendra cuts; aside from her brilliantly expressive artwork, it's her only way of coping. Since her own mother is too self-absorbed to hear her cries for help, Kendra finds support in others instead: from her therapist and her art teacher, from Sandy, the close family friend who encourages her artwork, and from Meghan, the classmate who's becoming a friend and maybe more. But the truth about Kendra's abuse is just waiting to explode, with startling unforeseen consequences. Scars is the unforgettable story of one girl's frightening path to the truth.
         </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Fjbv44Q1iCA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Fjbv44Q1iCA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 </body>
 </html>
